# pyOS

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  BEGINNER_GUIDE.md  LINUX_ABI.md  ROADMAP.md
examples/: advanced_os.py  hello_world.py  keyboard_input.py
examples/advanced/: advanced_os.py  shell_echo.py
examples/basic/: hello_world.py  keyboard_input.py
examples/lab/: bad_arch.py  cli_main.py  probe_api_surface.py  probe_deep_bugs.py  probe_edge_cases.py  probe_qemu_runtime.py
examples/linux/: README.md  busybox_userland.py
pyos/: __init__.py  builder.py  cli.py  debug.py  emulator.py  kernel.py  toolchain.py
pyos/api/: __init__.py  errors.py  fs.py  gdt.py  idt.py  interrupts.py  kernel.py  keyboard.py  memory.py  process.py  screen.py  syscalls.py
pyos/boot/: __init__.py  bootloader.asm
pyos/compiler/: __init__.py  assembler.py  codegen.py
pyos/drivers/: __init__.py  keyboard.py  screen.py
pyos/fs/: __init__.py
pyos/interrupts/: __init__.py  handler.py  idt.py
pyos/kernel/: __init__.py  kmain.c  linker.ld
pyos/kernel/arch/x86/: gdt.c  idt.c  isr.S  isr.asm  paging.c  pic.c  start.S  start.asm  switch.S  syscall.c  usercopy.c
pyos/kernel/drivers/: blkdev.c  floppy.c  keyboard.c  pci.c  pit.c  screen.c  shell.c  virtio_blk.c  virtio_net.c
pyos/kernel/fs/: ext2.c  fat12.c  ramfs.c  vfs.c
pyos/kernel/include/: blkdev.h  debug.h  elf.h  ext2.h  fat12.h  floppy.h  gdt.h  heap.h  idt.h  io.h  kernel.h  keyboard.h  net.h  paging.h  pci.h  pic.h  pmm.h  screen.h  shell.h  socket.h  string.h  syscall.h  task.h  timer.h  types.h  usercopy.h  vfs.h  virtio_blk.h  virtio_net.h
pyos/kernel/lib/: debug.c  string.c
pyos/kernel/mm/: heap.c  pmm.c
pyos/kernel/net/: net.c  socket.c
pyos/kernel/proc/: elf.c  task.c
pyos/memory/: __init__.py  gdt.py  manager.py
pyos/runtime/: linker.ld
pyos/runtime/include/: debug.h  heap.h  io.h  kernel.h  keyboard.h  pic.h  screen.h  syscall.h
pyos/runtime/src/: debug.c  heap.c  idt.c  keyboard.c  kmain.c  screen.c  start.S  syscall.c
pyos/syscalls/: __init__.py  handler.py
pyos/user/: ash.c  tiny_elf.py  user.ld
scripts/: build_ash.py  fetch_busybox.py
tests/: conftest.py  test_build.py
tests/integration/: test_qemu.py
tests/unit/: test_build.py  test_ext2_rootfs.py
