[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOS-kernel"
version = "1.0.0"
description = "Build real x86 operating systems with a Python DSL — freestanding C kernel + ASM bootloader"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    {name = "i87kxxzz", email = "redtgx32@gmail.com"},
]
keywords = [
    "operating-system",
    "os",
    "kernel",
    "x86",
    "bootloader",
    "qemu",
    "nasm",
    "systems-programming",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating System Kernels",
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
pyos = "pyos.cli:main"

[project.urls]
Homepage = "https://github.com/i87kxxz/pyOS"
Documentation = "https://github.com/i87kxxz/pyOS#readme"
Repository = "https://github.com/i87kxxz/pyOS"
Issues = "https://github.com/i87kxxz/pyOS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyos*"]

[tool.setuptools.package-data]
pyos = [
    "boot/*.asm",
    "boot/*.bin",
    "kernel/**/*.c",
    "kernel/**/*.h",
    "kernel/**/*.asm",
    "kernel/**/*.S",
    "kernel/*.ld",
    "kernel/include/*.h",
]
